// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Type Safe Api Model Project Unit Tests OpenAPI 1`] = `
Object {
  ".gitignore": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".
node_modules/
!/.gitattributes
!/.projen/tasks.json
!/.projen/deps.json
!/.projen/files.json
.api.json
",
  ".projen/files.json": Object {
    "//": "~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".",
    "files": Array [
      ".gitattributes",
      ".gitignore",
      ".projen/deps.json",
      ".projen/files.json",
      ".projen/tasks.json",
    ],
  },
  ".projen/tasks.json": Object {
    "//": "~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".",
    "tasks": Object {
      "build": Object {
        "description": "Full release build",
        "name": "build",
        "steps": Array [
          Object {
            "spawn": "default",
          },
          Object {
            "spawn": "pre-compile",
          },
          Object {
            "spawn": "compile",
          },
          Object {
            "spawn": "post-compile",
          },
          Object {
            "spawn": "test",
          },
          Object {
            "spawn": "package",
          },
        ],
      },
      "compile": Object {
        "description": "Only compile",
        "name": "compile",
        "steps": Array [
          Object {
            "spawn": "generate",
          },
        ],
      },
      "default": Object {
        "description": "Synthesize project files",
        "name": "default",
      },
      "eject": Object {
        "description": "Remove projen from the project",
        "env": Object {
          "PROJEN_EJECTING": "true",
        },
        "name": "eject",
        "steps": Array [
          Object {
            "spawn": "default",
          },
        ],
      },
      "generate": Object {
        "name": "generate",
        "steps": Array [
          Object {
            "cwd": "../../../../scripts/parser",
            "exec": "./parse-openapi-spec --spec-path ../../test/project/model/openapi-model/src/main/openapi/main.yaml --output-path ../../test/project/model/openapi-model/.api.json",
          },
        ],
      },
      "package": Object {
        "description": "Creates the distribution package",
        "name": "package",
      },
      "post-compile": Object {
        "description": "Runs after successful compilation",
        "name": "post-compile",
      },
      "pre-compile": Object {
        "description": "Prepare the project for compilation",
        "name": "pre-compile",
      },
      "test": Object {
        "description": "Run tests",
        "name": "test",
      },
    },
  },
  "README.md": "# OpenAPI Model

This project defines the API operations and their inputs and outputs, using [OpenAPI v3](https://swagger.io/specification/v3/).

The entrypoint for the API is \`src/main/openapi/main.yaml\`. You can add more yaml files (and subfolders) in the \`src/main/openapi\` directory and these will be included in your API definition so long as they are referencable from \`main.yaml\`.

Resources:
 - [OpenAPI v3 Documentation](https://swagger.io/specification/v3/)
 - [Type Safe API Documentation](https://github.com/aws/aws-prototyping-sdk/tree/mainline/packages/type-safe-api)

## Adding Operations

To add an operation, we must edit the \`paths\` section of the OpenAPI document. We add the desired path and HTTP method for the operation, as well as its inputs and outputs, for example:

\`\`\`yaml
paths:
  /foo/{myUrlParam}:
    post:
      operationId: CreateFoo
      parameters:
        - name: myUrlParam
          in: path
          schema:
            type: string
          required: true
      requestBody:
        content:
          application/json:
            schema:
              $ref: '#/components/schemas/CreateFooRequest'
      responses:
        200:
          description: Successful response
          content:
            application/json:
              schema:
                $ref: '#/components/schemas/CreateFooResponse'
\`\`\`

Notice we used \`$ref\` to reference \`components\` in the OpenAPI specification. We define these next:

\`\`\`yaml
components:
  schemas:
    CreateFooRequest:
      type: object
      properties:
        someParameter:
          type: string
        anotherParameter:
          type: double
      required:
        - someParameter
    CreateFooResponse:
      type: object
      properties:
        foo:
          $ref: '#/components/schemas/Foo'
      required:
        - foo
    Foo:
      type: object
      properties:
        myProperty:
          type: integer
      required:
        - myProperty
\`\`\`

Notice above we also used a reference to \`Foo\` in the \`CreateFooResponse\`

After adding the operation, please follow the remaining instructions in the [main README](../README.md).

## Breaking Up The Model

You may find that a single \`main.yaml\` file becomes unwieldy as the API grows. You can split the file up using references to local files within the \`src/main/openapi\` directory.

For example, you might choose to structure your spec as follows:

\`\`\`
|_ src/main/openapi/
    |_ main.yaml
    |_ paths/
        |_ index.yaml
        |_ sayHello.yaml
    |_ schemas/
        |_ index.yaml
        |_ helloResponse.yaml
\`\`\`

Where \`main.yaml\` looks as follows:

\`\`\`yaml
openapi: 3.0.3
info:
  version: 1.0.0
  title: Example API
paths:
  $ref: './paths/index.yaml'
components:
  schemas:
    $ref: './schemas/index.yaml'
\`\`\`

\`paths/index.yaml\`:

\`\`\`yaml
/hello:
  get:
    $ref: './sayHello.yaml'
\`\`\`

\`paths/sayHello.yaml\`:

\`\`\`yaml
operationId: sayHello
parameters:
 - in: query
   name: name
   schema:
     type: string
   required: true
responses:
  '200':
    description: Successful response
    content:
      'application/json':
        schema:
          $ref: '../schemas/helloResponse.yaml'
\`\`\`

\`schemas/index.yaml\`:

\`\`\`yaml
HelloResponse:
  $ref: './helloResponse.yaml'
\`\`\`

\`schemas/helloResponse.yaml\`:

\`\`\`yaml
type: object
properties:
  message:
    type: string
required:
  - message
\`\`\`
",
  "src/main/openapi/main.yaml": "openapi: 3.0.3
info:
  version: 1.0.0
  title: MyService
paths:
  /hello:
    get:
      operationId: sayHello
      parameters:
        - in: query
          name: name
          schema:
            type: string
          required: true
      responses:
        '200':
          description: Successful response
          content:
            'application/json':
              schema:
                $ref: '#/components/schemas/SayHelloResponseContent'
        '400':
          description: Error response
          content:
            'application/json':
              schema:
                $ref: '#/components/schemas/ApiErrorResponseContent'
components:
  schemas:
    ApiErrorResponseContent:
      type: object
      properties:
        errorMessage:
          type: string
      required:
        - errorMessage
    SayHelloResponseContent:
      type: object
      properties:
        message:
          type: string
      required:
        - message
",
}
`;

exports[`Type Safe Api Model Project Unit Tests Smithy 1`] = `
Object {
  ".gitignore": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".
node_modules/
!/.gitattributes
!/.projen/tasks.json
!/.projen/deps.json
!/.projen/files.json
gradle
gradlew
gradlew.bat
.gradle
!/build.gradle
!/smithy-build.json
smithy-output
.api.json
",
  ".projen/files.json": Object {
    "//": "~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".",
    "files": Array [
      ".gitattributes",
      ".gitignore",
      ".projen/deps.json",
      ".projen/files.json",
      ".projen/tasks.json",
      "build.gradle",
      "smithy-build.json",
    ],
  },
  ".projen/tasks.json": Object {
    "//": "~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".",
    "tasks": Object {
      "build": Object {
        "description": "Full release build",
        "name": "build",
        "steps": Array [
          Object {
            "spawn": "default",
          },
          Object {
            "spawn": "pre-compile",
          },
          Object {
            "spawn": "compile",
          },
          Object {
            "spawn": "post-compile",
          },
          Object {
            "spawn": "test",
          },
          Object {
            "spawn": "package",
          },
        ],
      },
      "compile": Object {
        "description": "Only compile",
        "name": "compile",
        "steps": Array [
          Object {
            "spawn": "generate",
          },
        ],
      },
      "default": Object {
        "description": "Synthesize project files",
        "name": "default",
      },
      "eject": Object {
        "description": "Remove projen from the project",
        "env": Object {
          "PROJEN_EJECTING": "true",
        },
        "name": "eject",
        "steps": Array [
          Object {
            "spawn": "default",
          },
        ],
      },
      "generate": Object {
        "name": "generate",
        "steps": Array [
          Object {
            "exec": "mkdir -p gradle/wrapper",
          },
          Object {
            "exec": "if [ ! -f gradle/wrapper/gradle-wrapper.jar ]; then cp ../../../../samples/smithy/gradle/wrapper/gradle-wrapper.jar gradle/wrapper/gradle-wrapper.jar; fi",
          },
          Object {
            "exec": "if [ ! -f gradle/wrapper/gradle-wrapper.properties ]; then cp ../../../../samples/smithy/gradle/wrapper/gradle-wrapper.properties gradle/wrapper/gradle-wrapper.properties; fi",
          },
          Object {
            "exec": "if [ ! -f gradlew ]; then cp ../../../../samples/smithy/gradlew gradlew; fi",
          },
          Object {
            "exec": "if [ ! -f gradlew.bat ]; then cp ../../../../samples/smithy/gradlew.bat gradlew.bat; fi",
          },
          Object {
            "exec": "./gradlew -p . generate -Pconfig=smithy-build.json -Pdiscover=src/main/smithy -Poutput=smithy-output",
          },
          Object {
            "cwd": "../../../../scripts/parser",
            "exec": "./parse-openapi-spec --spec-path ../../test/project/model/smithy-model/smithy-output/openapi/openapi/MyService.openapi.json --output-path ../../test/project/model/smithy-model/.api.json",
          },
        ],
      },
      "package": Object {
        "description": "Creates the distribution package",
        "name": "package",
      },
      "post-compile": Object {
        "description": "Runs after successful compilation",
        "name": "post-compile",
      },
      "pre-compile": Object {
        "description": "Prepare the project for compilation",
        "name": "pre-compile",
      },
      "test": Object {
        "description": "Run tests",
        "name": "test",
      },
    },
  },
  "README.md": "# Smithy Model

This project defines the API operations and their inputs and outputs, using an interface definition language called [Smithy](https://smithy.io/2.0/).

The default entrypoint for the API is \`src/main/smithy/main.smithy\`. You can add more Smithy files (and subfolders) in the \`src/main/smithy\` directory, and these will be discovered as part of the project's build task.

Resources:
 - [Smithy Documentation](https://smithy.io/2.0/)
 - [Type Safe API Documentation](https://github.com/aws/aws-prototyping-sdk/tree/mainline/packages/type-safe-api)

## Adding Operations

To add an operation, we can use the \`operation\` shape. It should be annotated with the \`@http\` trait, which defines the method and path for the operation. Each operation has \`input\`, \`output\` and \`errors\`. You can define the \`input\` and \`output\` inline using the \`:=\` syntax.

\`\`\`smithy
/// This is an example operation.
@http(method: \\"POST\\", uri: \\"/foo/{myUrlParam}\\")
operation CreateFoo {
    input := {
        /// This parameter comes from the url
        @httpLabel
        myUrlParam: String

        /// Since there's no @httpLabel or @httpQuery annotation,
        /// this parameter will be in the POST request body
        @reqired
        someParameter: String

        /// This parameter is also in the body, but is optional
        anotherParameter: Double
    }
    output := {
        @required
        foo: Foo
    }
    errors: [ApiError]
}
\`\`\`

In the above, we've referenced a shape called \`Foo\` in the output. Let's define that as a \`structure\`:

\`\`\`smithy
structure Foo {
    /// Some documentation about this property
    @required
    myProperty: Integer
}
\`\`\`

When we're happy with our new operation, we must add it to our \`service\`. By default, the \`service\` shape is in the \`src/main/smithy/main.smithy\` file.

\`\`\`smithy
@restJson1
service MyApi {
    version: \\"1.0\\"
    operations: [
        SayHello
        CreateFoo // <- add the new operation here
    ]
}
\`\`\`

After adding the operation, please follow the remaining instructions in the [main README](../README.md).

## Resources

A common pattern is to use resources to model parts of your API. These are collections of operations which for managing an entity with an identifier. In a resource, you define the identifier as well as operations to manage the entity's lifecycle. For example:

\`\`\`smithy
resource PetResource {
    identifiers: {
        petId: String
    }
    read: GetPet
    list: ListPets
    update: UpdatePet
    create: CreatePet
    delete: DeletePet
}
\`\`\`

For the resource to be included in your API, you must attach it to the \`service\` by adding it to the service's \`resources\` property:

\`\`\`smithy
@restJson1
service MyApi {
    version: \\"1.0\\"
    resources: [
        PetResource
    ]
}
\`\`\`

For more details, see the [Smithy documentation](https://smithy.io/2.0/spec/service-types.html#resource).

## Customising the Smithy Build

The build task for this project will by default generate an Open API specification from the Smithy model, which is then used to generate the runtime, infrastructure, and documentation projects.

You can further customise the build via editing the \`TypeSafeApiProject\` \`model.options.smithyBuildOptions\` in the root \`.projenrc\` file. This includes adding projections, or customising the \`openapi\` projection used to generate the Open API specification.

For details about customising the build, please see the [Type Safe API README](https://github.com/aws/aws-prototyping-sdk/tree/mainline/packages/type-safe-api), and refer to the [Smithy Build documentation](https://smithy.io/2.0/guides/building-models/build-config.html).
",
  "build.gradle": "// ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".
plugins {
    id \\"software.amazon.smithy\\" version \\"0.6.0\\"
}

sourceSets {
    main {
        java {
            srcDirs = ['src/main/smithy']
        }
    }
}

// Dependencies can be added by configuring smithyBuildOptions in your .projenrc file
repositories {
    mavenLocal()
    mavenCentral()
}

// Dependencies can be added by configuring smithyBuildOptions in your .projenrc file
dependencies {
    implementation \\"software.amazon.smithy:smithy-cli:1.28.0\\"
    implementation \\"software.amazon.smithy:smithy-model:1.28.0\\"
    implementation \\"software.amazon.smithy:smithy-openapi:1.28.0\\"
    implementation \\"software.amazon.smithy:smithy-aws-traits:1.28.0\\"
}

task generate(type: JavaExec) {
    configurations.implementation.setCanBeResolved(true)

    classpath = configurations.implementation
    mainClass.set('software.amazon.smithy.cli.SmithyCli')

    if (project.hasProperty(\\"config\\") && project.hasProperty(\\"output\\") && project.hasProperty(\\"discover\\")) {
        args(\\"build\\",
                \\"--config\\",
                file(project.getProperty(\\"config\\")).toString(),
                \\"--output\\",
                file(project.getProperty(\\"output\\")).toString(),
                \\"--discover\\",
                file(project.getProperty(\\"discover\\")).toString())
    }
}
",
  "settings.gradle": "rootProject.name = 'smithy-model'",
  "smithy-build.json": Object {
    "//": "~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".",
    "maven": Object {
      "dependencies": Array [
        "software.amazon.smithy:smithy-cli:1.28.0",
        "software.amazon.smithy:smithy-model:1.28.0",
        "software.amazon.smithy:smithy-openapi:1.28.0",
        "software.amazon.smithy:smithy-aws-traits:1.28.0",
      ],
      "repositories": Array [
        Object {
          "url": "https://repo.maven.apache.org/maven2/",
        },
        Object {
          "url": "file://~/.m2/repository",
        },
      ],
    },
    "projections": Object {
      "openapi": Object {
        "plugins": Object {
          "openapi": Object {
            "service": "com.test#MyService",
            "tags": true,
          },
        },
      },
    },
    "version": "2.0",
  },
  "src/main/smithy/main.smithy": "$version: \\"2\\"
namespace com.test

use aws.protocols#restJson1

/// A sample smithy api
@restJson1
service MyService {
    version: \\"1.0\\"
    operations: [SayHello]
}

@readonly
@http(method: \\"GET\\", uri: \\"/hello\\")
operation SayHello {
    input: SayHelloInput
    output: SayHelloOutput
    errors: [ApiError]
}

string Name
string Message

@input
structure SayHelloInput {
    @httpQuery(\\"name\\")
    @required
    name: Name
}

@output
structure SayHelloOutput {
    @required
    message: Message
}

@error(\\"client\\")
structure ApiError {
    @required
    errorMessage: Message
}
",
}
`;

exports[`Type Safe Api Model Project Unit Tests Smithy With Build Options 1`] = `
Object {
  ".gitignore": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".
node_modules/
!/.gitattributes
!/.projen/tasks.json
!/.projen/deps.json
!/.projen/files.json
gradle
gradlew
gradlew.bat
.gradle
!/build.gradle
!/smithy-build.json
smithy-output
.api.json
",
  ".projen/files.json": Object {
    "//": "~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".",
    "files": Array [
      ".gitattributes",
      ".gitignore",
      ".projen/deps.json",
      ".projen/files.json",
      ".projen/tasks.json",
      "build.gradle",
      "smithy-build.json",
    ],
  },
  ".projen/tasks.json": Object {
    "//": "~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".",
    "tasks": Object {
      "build": Object {
        "description": "Full release build",
        "name": "build",
        "steps": Array [
          Object {
            "spawn": "default",
          },
          Object {
            "spawn": "pre-compile",
          },
          Object {
            "spawn": "compile",
          },
          Object {
            "spawn": "post-compile",
          },
          Object {
            "spawn": "test",
          },
          Object {
            "spawn": "package",
          },
        ],
      },
      "compile": Object {
        "description": "Only compile",
        "name": "compile",
        "steps": Array [
          Object {
            "spawn": "generate",
          },
        ],
      },
      "default": Object {
        "description": "Synthesize project files",
        "name": "default",
      },
      "eject": Object {
        "description": "Remove projen from the project",
        "env": Object {
          "PROJEN_EJECTING": "true",
        },
        "name": "eject",
        "steps": Array [
          Object {
            "spawn": "default",
          },
        ],
      },
      "generate": Object {
        "name": "generate",
        "steps": Array [
          Object {
            "exec": "mkdir -p gradle/wrapper",
          },
          Object {
            "exec": "if [ ! -f gradle/wrapper/gradle-wrapper.jar ]; then cp ../../../../samples/smithy/gradle/wrapper/gradle-wrapper.jar gradle/wrapper/gradle-wrapper.jar; fi",
          },
          Object {
            "exec": "if [ ! -f gradle/wrapper/gradle-wrapper.properties ]; then cp ../../../../samples/smithy/gradle/wrapper/gradle-wrapper.properties gradle/wrapper/gradle-wrapper.properties; fi",
          },
          Object {
            "exec": "if [ ! -f gradlew ]; then cp ../../../../samples/smithy/gradlew gradlew; fi",
          },
          Object {
            "exec": "if [ ! -f gradlew.bat ]; then cp ../../../../samples/smithy/gradlew.bat gradlew.bat; fi",
          },
          Object {
            "exec": "./gradlew -p . generate -Pconfig=smithy-build.json -Pdiscover=src/main/smithy -Poutput=smithy-output",
          },
          Object {
            "cwd": "../../../../scripts/parser",
            "exec": "./parse-openapi-spec --spec-path ../../test/project/model/smithy-model-with-build-options/smithy-output/openapi/openapi/MyService.openapi.json --output-path ../../test/project/model/smithy-model-with-build-options/.api.json",
          },
        ],
      },
      "package": Object {
        "description": "Creates the distribution package",
        "name": "package",
      },
      "post-compile": Object {
        "description": "Runs after successful compilation",
        "name": "post-compile",
      },
      "pre-compile": Object {
        "description": "Prepare the project for compilation",
        "name": "pre-compile",
      },
      "test": Object {
        "description": "Run tests",
        "name": "test",
      },
    },
  },
  "README.md": "# Smithy Model

This project defines the API operations and their inputs and outputs, using an interface definition language called [Smithy](https://smithy.io/2.0/).

The default entrypoint for the API is \`src/main/smithy/main.smithy\`. You can add more Smithy files (and subfolders) in the \`src/main/smithy\` directory, and these will be discovered as part of the project's build task.

Resources:
 - [Smithy Documentation](https://smithy.io/2.0/)
 - [Type Safe API Documentation](https://github.com/aws/aws-prototyping-sdk/tree/mainline/packages/type-safe-api)

## Adding Operations

To add an operation, we can use the \`operation\` shape. It should be annotated with the \`@http\` trait, which defines the method and path for the operation. Each operation has \`input\`, \`output\` and \`errors\`. You can define the \`input\` and \`output\` inline using the \`:=\` syntax.

\`\`\`smithy
/// This is an example operation.
@http(method: \\"POST\\", uri: \\"/foo/{myUrlParam}\\")
operation CreateFoo {
    input := {
        /// This parameter comes from the url
        @httpLabel
        myUrlParam: String

        /// Since there's no @httpLabel or @httpQuery annotation,
        /// this parameter will be in the POST request body
        @reqired
        someParameter: String

        /// This parameter is also in the body, but is optional
        anotherParameter: Double
    }
    output := {
        @required
        foo: Foo
    }
    errors: [ApiError]
}
\`\`\`

In the above, we've referenced a shape called \`Foo\` in the output. Let's define that as a \`structure\`:

\`\`\`smithy
structure Foo {
    /// Some documentation about this property
    @required
    myProperty: Integer
}
\`\`\`

When we're happy with our new operation, we must add it to our \`service\`. By default, the \`service\` shape is in the \`src/main/smithy/main.smithy\` file.

\`\`\`smithy
@restJson1
service MyApi {
    version: \\"1.0\\"
    operations: [
        SayHello
        CreateFoo // <- add the new operation here
    ]
}
\`\`\`

After adding the operation, please follow the remaining instructions in the [main README](../README.md).

## Resources

A common pattern is to use resources to model parts of your API. These are collections of operations which for managing an entity with an identifier. In a resource, you define the identifier as well as operations to manage the entity's lifecycle. For example:

\`\`\`smithy
resource PetResource {
    identifiers: {
        petId: String
    }
    read: GetPet
    list: ListPets
    update: UpdatePet
    create: CreatePet
    delete: DeletePet
}
\`\`\`

For the resource to be included in your API, you must attach it to the \`service\` by adding it to the service's \`resources\` property:

\`\`\`smithy
@restJson1
service MyApi {
    version: \\"1.0\\"
    resources: [
        PetResource
    ]
}
\`\`\`

For more details, see the [Smithy documentation](https://smithy.io/2.0/spec/service-types.html#resource).

## Customising the Smithy Build

The build task for this project will by default generate an Open API specification from the Smithy model, which is then used to generate the runtime, infrastructure, and documentation projects.

You can further customise the build via editing the \`TypeSafeApiProject\` \`model.options.smithyBuildOptions\` in the root \`.projenrc\` file. This includes adding projections, or customising the \`openapi\` projection used to generate the Open API specification.

For details about customising the build, please see the [Type Safe API README](https://github.com/aws/aws-prototyping-sdk/tree/mainline/packages/type-safe-api), and refer to the [Smithy Build documentation](https://smithy.io/2.0/guides/building-models/build-config.html).
",
  "build.gradle": "// ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".
plugins {
    id \\"software.amazon.smithy\\" version \\"0.6.0\\"
}

sourceSets {
    main {
        java {
            srcDirs = ['src/main/smithy']
        }
    }
}

// Dependencies can be added by configuring smithyBuildOptions in your .projenrc file
repositories {
    mavenLocal()
    mavenCentral()
}

// Dependencies can be added by configuring smithyBuildOptions in your .projenrc file
dependencies {
    implementation \\"software.amazon.smithy:smithy-cli:1.28.0\\"
    implementation \\"software.amazon.smithy:smithy-model:1.28.0\\"
    implementation \\"software.amazon.smithy:smithy-openapi:1.28.0\\"
    implementation \\"software.amazon.smithy:smithy-aws-traits:1.28.0\\"
}

task generate(type: JavaExec) {
    configurations.implementation.setCanBeResolved(true)

    classpath = configurations.implementation
    mainClass.set('software.amazon.smithy.cli.SmithyCli')

    if (project.hasProperty(\\"config\\") && project.hasProperty(\\"output\\") && project.hasProperty(\\"discover\\")) {
        args(\\"build\\",
                \\"--config\\",
                file(project.getProperty(\\"config\\")).toString(),
                \\"--output\\",
                file(project.getProperty(\\"output\\")).toString(),
                \\"--discover\\",
                file(project.getProperty(\\"discover\\")).toString())
    }
}
",
  "settings.gradle": "rootProject.name = 'smithy-model-with-build-options'",
  "smithy-build.json": Object {
    "//": "~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".",
    "maven": Object {
      "dependencies": Array [
        "software.amazon.smithy:smithy-cli:1.28.0",
        "software.amazon.smithy:smithy-model:1.28.0",
        "software.amazon.smithy:smithy-openapi:1.28.0",
        "software.amazon.smithy:smithy-aws-traits:1.28.0",
      ],
      "repositories": Array [
        Object {
          "url": "https://repo.maven.apache.org/maven2/",
        },
        Object {
          "url": "file://~/.m2/repository",
        },
      ],
    },
    "projections": Object {
      "openapi": Object {
        "plugins": Object {
          "openapi": Object {
            "forbidGreedyLabels": true,
            "ignoreUnsupportedTraits": true,
            "service": "com.test#MyService",
            "tags": true,
          },
        },
      },
    },
    "version": "2.0",
  },
  "src/main/smithy/main.smithy": "$version: \\"2\\"
namespace com.test

use aws.protocols#restJson1

/// A sample smithy api
@restJson1
service MyService {
    version: \\"1.0\\"
    operations: [SayHello]
}

@readonly
@http(method: \\"GET\\", uri: \\"/hello\\")
operation SayHello {
    input: SayHelloInput
    output: SayHelloOutput
    errors: [ApiError]
}

string Name
string Message

@input
structure SayHelloInput {
    @httpQuery(\\"name\\")
    @required
    name: Name
}

@output
structure SayHelloOutput {
    @required
    message: Message
}

@error(\\"client\\")
structure ApiError {
    @required
    errorMessage: Message
}
",
}
`;
